User endpoints fixes.
