# swagger.json
@@ -496,9 +496,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "Not Found"
           },
@@ -519,6 +516,24 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "gitHubId": {
+                  "example": "any"
+                },
+                "username": {
+                  "example": "any"
+                },
+                "displayName": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
